--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,54 @@
+@import url("https://fonts.googleapis.com/css?family=Fira+Sans+Condensed|Fjalla+One|Inria+Sans|Open+Sans|Oswald|Lato|Roboto+Condensed|Quicksand&display=swap");
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Oswald", sans-serif;
+}
+body,
+text {
+  /* font-family: "Source Sans Pro", Georgia, sans-serif; */
+  font-family: "Open-Sans", sans-serif;
+  font-size: 15px;
+}
+
+.jumbotron {
+  border-radius: 0;
+}
+.row-header {
+  margin: 0px auto;
+  padding: 0px auto;
+}
+
+.row-content {
+  margin: 0px auto;
+  padding: 50px 0px 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px;
+}
+
+.footer {
+  background-color: #d1c4e9;
+  margin: 0px auto;
+  padding: 20px 0px 20px 0px;
+}
+.jumbotron {
+  padding: 70px 30px 70px 30px;
+  margin: 0px auto;
+  background: #9575cd;
+  color: floralwhite;
+}
+
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
+}
+
+.navbar-dark {
+  background-color: #512da8;
+}
 .App {
   text-align: center;
 }
